--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -558,7 +558,7 @@ header nav ul li {
 }
 
 .image-width {
-    width: 302px;
+    width: 305px;
 }
 
 .activity_picture img {
@@ -606,7 +606,7 @@ header nav ul li {
 }
 
 .activities_in_city article {
-    margin: 0px 1.2rem 0px 1.2rem;
+    margin: 0px 1.1rem 0px 1.1rem;
 }
 
 
